@@ -1,5 +1,6 @@
 1.1.10.pre
 * fix hirb loading/unicode issue + colorize tables (thanks to halan)
+* colorize paged wirb output
 * include method locator gem (improved ancestors)
 * small tweaks...
 
